--- a/resources/css/origin/origin.css
+++ b/resources/css/origin/origin.css
@@ -254,6 +254,11 @@ a.back-to-top:hover {
 }
 .notifications-menu .dropdown-item {
 	white-space: normal;
+	padding: .6rem;
+}
+.notifications-menu .dropdown-item:active {
+	color: unset;
+	background-color: unset;
 }
 .notifications-menu .activity-time {
 	font-size: .8rem !important;
@@ -597,6 +602,12 @@ table > tbody > tr > td > a:hover {
 	flex: 1;
 	justify-content: flex-end;
 }
+.navbar-white.navbar-light .univeral-search-form .input-group-prepend .input-group-text {
+	background-color: #f5f5f5;
+}
+.navbar-white.navbar-light .univeral-search-form .input-group:focus-within .input-group-prepend .input-group-text {
+	background-color: #f2f2f2;
+}
 .navbar-nav .form-group {
 	margin-bottom: 0;
 }
@@ -861,9 +872,9 @@ table > tbody > tr > td > a:hover {
 }
 .timeline>div>.fa, .timeline>div>.fab, .timeline>div>.fad, .timeline>div>.fal, .timeline>div>.far, .timeline>div>.fas, .timeline>div>.ion, .timeline>div>.svg-inline--fa {
 	font-size: 14px;
-	height: 34px;
-	width: 34px;
-	line-height: 34px;
+	height: 35px;
+	width: 35px;
+	line-height: 35px;
 	left: 16px;
 }
 .data-loader {
@@ -1008,6 +1019,9 @@ table > tbody > tr > td > a:hover {
 .modal-header {
 	padding: 1.2rem 1.2rem 0 1.2rem;
 	border-bottom: 0;
+}
+.modal-header .close {
+	margin: -1.2rem -1rem -1rem auto;
 }
 .modal-body {
 	padding: 1.2rem;
