--- a/resources/css/origin/report_view.css
+++ b/resources/css/origin/report_view.css
@@ -18,8 +18,8 @@
 }
 .report-actions {
 	margin: 0px;
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
 }
 #report-table td {
 	padding: .5rem;
